Improved rollup table styling. Changed integer, use fiscal year and amount field from readonly to aura:if so they don't appear if unnecessary. Moved amount field to be near detail, and removed extra text on label for object prefix. Moved filter group. Set date field to always be visible and to set size dynamically based on amount field presence. Changed readOnlyMap to renderMap and reversed the logic. Added dynamic integer description and a pattern match/error message. Fixed alignment when required error appears + fixed resulting alignment with checkboxes. And removed a few console logs.

--- a/src/aura/CRLP_Rollup/CRLP_Rollup.css
+++ b/src/aura/CRLP_Rollup/CRLP_Rollup.css
@@ -1,5 +1,5 @@
 .THIS .slds-checkbox, .THIS .rollupCheckbox{
-    padding-top: 15px;
+    padding-top: 2em;
 }
 .THIS .slds-form-element__label{
     margin-left: .5rem;
